# flutter_open_xr

./: .gitignore  .pubignore  AGENTS.md  CMakePresets.json  PLAN.md  README.ja.md  README.md  pubspec.yaml
cmake/: DownloadFile.cmake
docs/legacy_native_sample/: README.md
example/: README.md  pubspec.yaml
example/lib/: main.dart
flutter_open_xr/: CHANGELOG.md  pubspec.yaml
flutter_open_xr/lib/src/: builder.dart  cli.dart
flutter_open_xr/native/windows/src/flutter_xr/: app_input.cpp
flutter_samples/offscreen_ui/lib/: main.dart
legacy/native_sample/: CMakeLists.txt  CMakePresets.json
legacy/native_sample/flutter_samples/offscreen_ui/: pubspec.yaml
legacy/native_sample/flutter_samples/offscreen_ui/lib/: main.dart
legacy/native_sample/src/: CMakeLists.txt
legacy/native_sample/src/flutter_xr/: app_flutter.cpp  main.cpp
lib/: background.dart  flutter_open_xr.dart
lib/src/: build_options.dart
native/windows/: CMakeLists.txt
native/windows/src/flutter_xr/: app.h  app_background.cpp  app_core.cpp  app_flutter.cpp  app_input.cpp  shared.cpp  shared.h
src/: CMakeLists.txt  flutter_offscreen.cpp  flutter_xr_step3.cpp  flutter_xr_step4.cpp  xr_quad.cpp
src/flutter_xr/: app.h  app_core.cpp  app_flutter.cpp  app_input.cpp  shared.cpp  shared.h
